# SAFER-Bench

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  README.md  justfile  pyproject.toml
configs/: __init__.py  baseline.yaml  config.yaml  experiments.yaml  sweep_example.yaml
configs/federation/: centralized_1do.yaml  hybrid_2do.yaml  hybrid_3do.yaml  hybrid_4do.yaml  local_10do.yaml  local_2do.yaml  local_3do.yaml  local_4do.yaml  local_5do.yaml  separated_2do.yaml  separated_3do.yaml  specialty_7do.yaml
configs/llm/: biomistral_7b.yaml  biomistral_7b_instruct.yaml  llama3.3_70b_gguf.yaml  llama_1b.yaml  mistral_7b_instruct.yaml  openbiollm_70b_gguf.yaml  qwen_small.yaml  smollm_1.7b.yaml  smollm_360m.yaml
configs/merger/: borda.yaml  combmnz.yaml  combsum.yaml  rrf.yaml  score_avg.yaml  weighted_rrf.yaml
configs/privacy/: dp_0.1.yaml  dp_1.0.yaml  k_anon_5.yaml  none.yaml
configs/retriever/: bm25.yaml  faiss_hnsw.yaml  faiss_ivf.yaml  hybrid.yaml
datasets/: README.md  dataset_download.ipynb
docs/plans/: METRICS_IMPLEMENTATION_PLAN.md
docs/progress/: March1,2026.md
notebooks/: README.md  do1.ipynb  do2.ipynb  do3.ipynb  ds.ipynb  pyproject.toml
notebooks/fedrag/: .gitignore  README.md  pyproject.toml
notebooks/fedrag/fedrag_v1/: README.md  pyproject.toml
notebooks/fedrag/fedrag_v1/fedrag/: server_app.py
notebooks/fedrag/local/: do2.ipynb  ds.ipynb
notebooks/fedrag_v1/: pyproject.toml
notebooks/fedrag_v1/fedrag/: client_app.py  llm_querier.py  mirage_qa.py  retriever.py  server_app.py  task.py
scripts/: bootstrap_ci.py  generate_specialty_mapping.py  prebuild_faiss_indexes.py  run_all_federations.sh
src/safer_bench/: benchmark_runner.py  data_partitioner.py  dataset_utils.py  federation_manager.py  fedrag_adapter.py  logging.py  main.py  metrics_collector.py  mlflow_tracker.py  models.py  results_reporter.py  specialty_classifier.py  utils.py
src/safer_bench/assets/fedrag_v1/: pyproject.toml
src/safer_bench/assets/fedrag_v1/fedrag/: client_app.py  llm_querier.py  merger.py  mirage_qa.py  retriever.py  server_app.py
src/safer_bench/assets/fedrag_v1/fedrag/mergers/: __init__.py  base.py  borda.py  combmnz.py  combsum.py  rrf.py  weighted_rrf.py
src/safer_bench/config/: __init__.py  benchmark_config.py  experiment_matrix.py
