[project]
name = "safer-bench"
version = "0.1.0"
description = "A comprehensive benchmark framework for evaluating Federated Retrieval-Augmented Generation (RAG) systems with approval-based privacy controls."
license = "Apache-2.0"
dependencies = [
    "syft-flwr>=0.2.1",
    "numpy>=2.3.0",
    "faiss-cpu>=1.10.0",
    "tqdm>=4.67",
    "sentence_transformers>=5.0.0",
    "jupyterlab>=4.4.7",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
]